--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
+body {
+  background-image: url("./Image/bg.jpg");
+}
+h1 {
+  text-shadow: rgb(255, 255, 255) 1px 0 10px;
+  margin-left: 2%;
   text-align: center;
+  font-size: 3rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
   flex-direction: column;
+}
+
+.nav-bar {
+  width: 200px;
+  background-color: #f0f0f0;
+}
+
+.countries-section {
+  flex-grow: 1;
+  overflow-y: auto;
+  display: flex;
+}
+
+.countries-list {
+  background-color: #030001a8;
+  backdrop-filter: blur(20px);
+  width: 26%;
+  height: 87vh;
+  overflow: auto;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  gap: 2%;
+  overflow-x: hidden;
+  padding-left: 1%;
+}
+
+.countries-list button {
+  display: block;
+  padding-top: 6%;
+  margin-bottom: 5px;
+  width: 88%;
+  border-radius: 5px;
+  padding: 2%;
+  font-size: 1.3rem;
+  text-align: center;
+  border: none;
+}
+
+.search-container {
+  width: 100%;
+}
+
+.search-input {
+  display: block;
+  padding-top: 6%;
+  margin-bottom: 5px;
+  width: 94%;
+  border-radius: 5px;
+  padding: 4%;
+  font-size: 1.1rem;
+}
+
+.validation {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  background-color: #030001a8;
+  backdrop-filter: blur(20px);
+}
+
+.selected-countries {
+  width: 68%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+h4 {
+  font-size: 3rem;
+  text-shadow: rgb(255, 255, 255) 1px 0 10px;
+}
+
+.tag {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-shadow: rgb(255, 255, 255) 1px 0 10px;
+}
+.btn-delete {
+  background-color: red;
+  border: none;
+  border-radius: 5px;
+  margin-left: 6px;
   color: white;
+  text-align: center;
+}
+.btn-country {
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  width: 24%;
+  height: 4vh;
+  font-size: 1.1rem;
+  border: 1px solid;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.mail {
+  margin-top: 4%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-email {
+  border-radius: 5px;
+  width: 100%;
+  height: 4vh;
+  font-size: 1.1rem;
+  border: 1px solid;
+}
+p {
+  color: red;
+  font-weight: 700;
+  font-size: 1rem;
+  text-shadow: rgb(0 0 0) 1px 0 10px;
+}
+.btn-email {
+  border: none;
+  border-radius: 5px;
+  width: 50%;
+  height: 4vh;
+  font-size: 1.1rem;
+  border: 1px solid;
+  margin-top: 10px;
+  cursor: pointer;
 }
